[gd_scene load_steps=46 format=3 uid="uid://bbg8g31tr56th"]

[ext_resource type="PackedScene" uid="uid://cktksmdbn2nmn" path="res://scenes/character/zombie/zombie_000_base.tscn" id="1_onwj1"]
[ext_resource type="Texture2D" uid="uid://ni7u5qre4aik" path="res://assets/reanim/Zombie_bungi_body.png" id="2_a0b6f"]
[ext_resource type="Script" uid="uid://clwhxnu57dcn2" path="res://scripts/character/zombie/zombie_021_bungi.gd" id="2_ykfrv"]
[ext_resource type="Texture2D" uid="uid://b4n2vbif57tbw" path="res://assets/image/main_game_item/zombie_items/BungeeTarget.png" id="3_d5mcp"]
[ext_resource type="Texture2D" uid="uid://drrli3aj4b81r" path="res://assets/image/main_game_item/zombie_items/BungeeCord.png" id="3_ybvct"]
[ext_resource type="Texture2D" uid="uid://bdf4plya5ncom" path="res://assets/reanim/Zombie_bungi_rightleg_upper.png" id="3_ykfrv"]
[ext_resource type="Texture2D" uid="uid://7l5orx8w6bs6" path="res://assets/reanim/Zombie_bungi_rightleg_lower.png" id="4_ybvct"]
[ext_resource type="Texture2D" uid="uid://cjcr1tlvwtumn" path="res://assets/reanim/Zombie_bungi_foot.png" id="5_d5mcp"]
[ext_resource type="Texture2D" uid="uid://b7pf87l4wyfx0" path="res://assets/reanim/Zombie_bungi_leftleg_upper.png" id="6_upuuw"]
[ext_resource type="Texture2D" uid="uid://dil6nq4haoji6" path="res://assets/reanim/Zombie_bungi_left_tatter.png" id="7_khhiw"]
[ext_resource type="Texture2D" uid="uid://cq2x0vj5ju3kf" path="res://assets/reanim/Zombie_bungi_leftshirt.png" id="8_p25vc"]
[ext_resource type="Texture2D" uid="uid://b30lm4ay2qo8d" path="res://assets/reanim/Zombie_bungi_rightshirt.png" id="9_8d5nx"]
[ext_resource type="Texture2D" uid="uid://byghtcm5ywjss" path="res://assets/reanim/Zombie_bungi_leftleg_lower.png" id="10_usjfy"]
[ext_resource type="Texture2D" uid="uid://c3xwcqjvlgxlm" path="res://assets/reanim/Zombie_bungi_leftleg_tatter.png" id="11_fblr2"]
[ext_resource type="Texture2D" uid="uid://c73w6fjerlg5f" path="res://assets/reanim/Zombie_bungi_rightarm_upper.png" id="12_3wvdt"]
[ext_resource type="Texture2D" uid="uid://dj4gfm8sr42hb" path="res://assets/reanim/Zombie_bungi_rightarm_lower.png" id="13_6178g"]
[ext_resource type="Texture2D" uid="uid://demqoy2s3fhri" path="res://assets/reanim/Zombie_bungi_rightarm_cuff.png" id="14_sykij"]
[ext_resource type="Texture2D" uid="uid://cc2yfg7unkcyq" path="res://assets/reanim/Zombie_bungi_hand.png" id="15_mjxwu"]
[ext_resource type="Texture2D" uid="uid://cerfji34nvenc" path="res://assets/reanim/Zombie_bungi_leftarm_upper.png" id="16_4elt0"]
[ext_resource type="Texture2D" uid="uid://csc3soiyqlcg3" path="res://assets/reanim/Zombie_bungi_leftarm_lower.png" id="17_qy0td"]
[ext_resource type="Texture2D" uid="uid://cr5wbmtt2c1o4" path="res://assets/reanim/Zombie_bungi_jaw.png" id="18_imx3q"]
[ext_resource type="Texture2D" uid="uid://cmvshansx1t4" path="res://assets/reanim/Zombie_bungi_head.png" id="19_l7o4p"]
[ext_resource type="Texture2D" uid="uid://drpdbrrx80w50" path="res://assets/reanim/Zombie_bungi_hair.png" id="20_rkgsd"]
[ext_resource type="Animation" uid="uid://c05ppetvbvju2" path="res://animation/character/zombie/021_zombie_bungi/Zombie_bungi_drop.tres" id="21_by4nx"]
[ext_resource type="Animation" uid="uid://suri3adeuspy" path="res://animation/character/zombie/021_zombie_bungi/Zombie_bungi_grab.tres" id="22_qbgit"]
[ext_resource type="Animation" uid="uid://c7c0v7g6tkqp1" path="res://animation/character/zombie/021_zombie_bungi/Zombie_bungi_hold.tres" id="23_0sp28"]
[ext_resource type="Animation" uid="uid://dn3naym2wmuh7" path="res://animation/character/zombie/021_zombie_bungi/Zombie_bungi_idle.tres" id="24_0rum0"]
[ext_resource type="Animation" uid="uid://8gg4sid31erl" path="res://animation/character/zombie/021_zombie_bungi/Zombie_bungi_raise.tres" id="25_0i828"]
[ext_resource type="Script" uid="uid://jl0nl4a234bc" path="res://scripts/resources/resource_body_change.gd" id="30_3wvdt"]
[ext_resource type="Script" uid="uid://drotj4n03qg0e" path="res://scripts/character/components/charred_component/component_charred_black_anim.gd" id="30_fblr2"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q7pds"]
_data = {
&"Zombie_bungi_drop": ExtResource("21_by4nx"),
&"Zombie_bungi_grab": ExtResource("22_qbgit"),
&"Zombie_bungi_hold": ExtResource("23_0sp28"),
&"Zombie_bungi_idle": ExtResource("24_0rum0"),
&"Zombie_bungi_raise": ExtResource("25_0i828")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_onwj1"]
animation = &"Zombie_bungi_drop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a0b6f"]
animation = &"Zombie_bungi_grab"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ykfrv"]
animation = &"Zombie_bungi_hold"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ybvct"]
animation = &"Zombie_bungi_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d5mcp"]
animation = &"Zombie_bungi_raise"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_upuuw"]
advance_mode = 2
advance_expression = "is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_khhiw"]
advance_mode = 2
advance_expression = "not is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p25vc"]
advance_mode = 2
advance_expression = "is_drop_end"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8d5nx"]
break_loop_at_end = true
switch_mode = 2
advance_mode = 2
advance_expression = "is_grab"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_usjfy"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fblr2"]
advance_mode = 2
advance_expression = "is_umbrella_raise"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fblr2"]
states/End/position = Vector2(959, 101)
states/Start/position = Vector2(119, 89)
states/Zombie_bungi_drop/node = SubResource("AnimationNodeAnimation_onwj1")
states/Zombie_bungi_drop/position = Vector2(375, 89)
states/Zombie_bungi_grab/node = SubResource("AnimationNodeAnimation_a0b6f")
states/Zombie_bungi_grab/position = Vector2(557, 8)
states/Zombie_bungi_hold/node = SubResource("AnimationNodeAnimation_ykfrv")
states/Zombie_bungi_hold/position = Vector2(823, 8)
states/Zombie_bungi_idle/node = SubResource("AnimationNodeAnimation_ybvct")
states/Zombie_bungi_idle/position = Vector2(271, 8)
states/Zombie_bungi_raise/node = SubResource("AnimationNodeAnimation_d5mcp")
states/Zombie_bungi_raise/position = Vector2(704, 89)
transitions = ["Start", "Zombie_bungi_idle", SubResource("AnimationNodeStateMachineTransition_upuuw"), "Start", "Zombie_bungi_drop", SubResource("AnimationNodeStateMachineTransition_khhiw"), "Zombie_bungi_drop", "Zombie_bungi_idle", SubResource("AnimationNodeStateMachineTransition_p25vc"), "Zombie_bungi_idle", "Zombie_bungi_grab", SubResource("AnimationNodeStateMachineTransition_8d5nx"), "Zombie_bungi_grab", "Zombie_bungi_raise", SubResource("AnimationNodeStateMachineTransition_usjfy"), "Zombie_bungi_drop", "Zombie_bungi_raise", SubResource("AnimationNodeStateMachineTransition_fblr2")]
graph_offset = Vector2(-64, -89)

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_3wvdt"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_6178g"]
graph_offset = Vector2(-191, 41)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_fblr2")
nodes/StateMachine/position = Vector2(-140, 120)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_3wvdt")
nodes/TimeScale/position = Vector2(100, 120)
node_connections = [&"TimeScale", 0, &"StateMachine", &"output", 0, &"TimeScale"]

[node name="Zombie021Bungi" node_paths=PackedStringArray("special_node2d_update_pos_in_slope") instance=ExtResource("1_onwj1")]
z_index = -7
script = ExtResource("2_ykfrv")
is_drop_end = false
is_grab = false
is_umbrella_raise = false
zombie_type = 21
sfx_enter_name = &"bungee_scream"
special_node2d_update_pos_in_slope = [NodePath("BungeeTarget")]

[node name="BungeeTarget" type="Sprite2D" parent="." index="1"]
z_index = 9
position = Vector2(1, -18)
texture = ExtResource("3_d5mcp")

[node name="BodyCorrect" parent="Body" index="0"]
position = Vector2(-43, -121)

[node name="Zombie_bungi_body" type="Sprite2D" parent="Body/BodyCorrect" index="0"]
position = Vector2(17.6, 42.77)
scale = Vector2(0.702, 0.631921)
texture = ExtResource("2_a0b6f")
centered = false

[node name="BungeeCords" type="Node2D" parent="Body/BodyCorrect/Zombie_bungi_body" index="0"]
position = Vector2(35.6125, -22.792)
scale = Vector2(1.4245, 1.45156)

[node name="BungeeCord" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="0"]
texture = ExtResource("3_ybvct")

[node name="BungeeCord2" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="1"]
position = Vector2(0, -50)
texture = ExtResource("3_ybvct")

[node name="BungeeCord3" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="2"]
position = Vector2(0, -100)
texture = ExtResource("3_ybvct")

[node name="BungeeCord4" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="3"]
position = Vector2(0, -150)
texture = ExtResource("3_ybvct")

[node name="BungeeCord5" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="4"]
position = Vector2(0, -200)
texture = ExtResource("3_ybvct")

[node name="BungeeCord6" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="5"]
position = Vector2(0, -250)
texture = ExtResource("3_ybvct")

[node name="BungeeCord7" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="6"]
position = Vector2(0, -300)
texture = ExtResource("3_ybvct")

[node name="BungeeCord8" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="7"]
position = Vector2(0, -350)
texture = ExtResource("3_ybvct")

[node name="BungeeCord9" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="8"]
position = Vector2(0, -400)
texture = ExtResource("3_ybvct")

[node name="BungeeCord10" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="9"]
position = Vector2(0, -450)
texture = ExtResource("3_ybvct")

[node name="BungeeCord11" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="10"]
position = Vector2(0, -500)
texture = ExtResource("3_ybvct")

[node name="BungeeCord12" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="11"]
position = Vector2(0, -550)
texture = ExtResource("3_ybvct")

[node name="BungeeCord13" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="12"]
position = Vector2(0, -600)
texture = ExtResource("3_ybvct")

[node name="BungeeCord14" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="13"]
position = Vector2(0, -650)
texture = ExtResource("3_ybvct")

[node name="BungeeCord15" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="14"]
position = Vector2(0, -700)
texture = ExtResource("3_ybvct")

[node name="BungeeCord16" type="Sprite2D" parent="Body/BodyCorrect/Zombie_bungi_body/BungeeCords" index="15"]
position = Vector2(0, -750)
texture = ExtResource("3_ybvct")

[node name="Zombie_bungi_rightleg_upper" type="Sprite2D" parent="Body/BodyCorrect" index="1"]
position = Vector2(12.3, 75.4892)
rotation = -0.175814
scale = Vector2(0.701, 0.701)
texture = ExtResource("3_ykfrv")
centered = false

[node name="Zombie_bungi_rightleg_lower" type="Sprite2D" parent="Body/BodyCorrect" index="2"]
position = Vector2(6.8, 77.7892)
rotation = -0.111504
scale = Vector2(0.701, 0.701)
texture = ExtResource("4_ybvct")
centered = false

[node name="Zombie_bungi_rightleg_foot" type="Sprite2D" parent="Body/BodyCorrect" index="3"]
position = Vector2(-13.5384, 102.743)
rotation = -0.501864
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_d5mcp")
centered = false

[node name="Zombie_bungi_leftleg_upper" type="Sprite2D" parent="Body/BodyCorrect" index="4"]
position = Vector2(51.8808, 69.0045)
rotation = 0.126876
scale = Vector2(0.701, 0.701)
texture = ExtResource("6_upuuw")
centered = false

[node name="Zombie_bungi_left_tatter" type="Sprite2D" parent="Body/BodyCorrect" index="5"]
position = Vector2(57.5808, 67.7468)
rotation = 0.152386
scale = Vector2(0.712616, 0.766079)
skew = 0.161447
texture = ExtResource("7_khhiw")
centered = false

[node name="Zombie_bungi_leftshirt" type="Sprite2D" parent="Body/BodyCorrect" index="6"]
position = Vector2(58.0192, 53.4468)
rotation = 0.126876
scale = Vector2(0.712616, 0.701)
skew = -0.126876
texture = ExtResource("8_p25vc")
centered = false

[node name="Zombie_bungi_rightshirt" type="Sprite2D" parent="Body/BodyCorrect" index="7"]
position = Vector2(2.48079, 66.7163)
rotation = -0.308597
scale = Vector2(0.739847, 0.676576)
skew = 0.188367
texture = ExtResource("9_8d5nx")
centered = false

[node name="Zombie_bungi_leftleg_lower" type="Sprite2D" parent="Body/BodyCorrect" index="8"]
position = Vector2(55.9384, 78.5892)
rotation = -0.0286651
scale = Vector2(0.7, 0.7)
texture = ExtResource("10_usjfy")
centered = false

[node name="Zombie_bungi_leftleg_tatter" type="Sprite2D" parent="Body/BodyCorrect" index="9"]
position = Vector2(74.7424, 91.6931)
rotation = 0.461653
scale = Vector2(0.746808, 0.744808)
skew = 0.0709563
texture = ExtResource("11_fblr2")
centered = false

[node name="Zombie_bungi_leftleg_foot" type="Sprite2D" parent="Body/BodyCorrect" index="10"]
position = Vector2(96.1808, 98.4123)
rotation = 3.25833
scale = Vector2(0.7, 0.7)
skew = -3.14159
texture = ExtResource("5_d5mcp")
centered = false

[node name="Zombie_bungi_rightarm_upper" type="Sprite2D" parent="Body/BodyCorrect" index="11"]
position = Vector2(-1.92316, 28.4429)
rotation = 0.0335657
scale = Vector2(0.7, 0.708616)
skew = -0.126876
texture = ExtResource("12_3wvdt")
centered = false

[node name="Zombie_bungi_rightarm_lower" type="Sprite2D" parent="Body/BodyCorrect" index="12"]
position = Vector2(-11.3232, 31.966)
rotation = -0.0961309
scale = Vector2(0.7, 0.7)
texture = ExtResource("13_6178g")
centered = false

[node name="Zombie_bungi_rightarm_cuff" type="Sprite2D" parent="Body/BodyCorrect" index="13"]
position = Vector2(-19.6616, 41.8163)
rotation = -0.415535
scale = Vector2(0.700808, 0.700808)
texture = ExtResource("14_sykij")
centered = false

[node name="Zombie_bungi_rightarm_hand" type="Sprite2D" parent="Body/BodyCorrect" index="14"]
position = Vector2(-36.8039, 46.8242)
rotation = -0.549728
scale = Vector2(0.700808, 0.700808)
texture = ExtResource("15_mjxwu")
centered = false

[node name="Zombie_bungi_leftarm_upper" type="Sprite2D" parent="Body/BodyCorrect" index="15"]
position = Vector2(57.5808, 32.7084)
rotation = -0.0265839
scale = Vector2(0.701, 0.704)
skew = 0.0825033
texture = ExtResource("16_4elt0")
centered = false

[node name="Zombie_bungi_leftarm_lower" type="Sprite2D" parent="Body/BodyCorrect" index="16"]
position = Vector2(75.2616, 31.466)
rotation = 0.225423
scale = Vector2(0.700808, 0.700808)
texture = ExtResource("17_qy0td")
centered = false

[node name="Zombie_bungi_leftarm_hand" type="Sprite2D" parent="Body/BodyCorrect" index="17"]
position = Vector2(114.3, 50.701)
rotation = 3.62144
scale = Vector2(0.700808, 0.700808)
skew = -3.14159
texture = ExtResource("15_mjxwu")
centered = false

[node name="Zombie_bungi_body2" type="Sprite2D" parent="Body/BodyCorrect" index="18"]
visible = false
centered = false

[node name="Zombie_bungi_rightarm_upper2" type="Sprite2D" parent="Body/BodyCorrect" index="19"]
visible = false
centered = false

[node name="Zombie_bungi_leftarm_upper2" type="Sprite2D" parent="Body/BodyCorrect" index="20"]
visible = false
centered = false

[node name="Zombie_bungi_jaw" type="Sprite2D" parent="Body/BodyCorrect" index="21"]
position = Vector2(26.3, 57.2276)
scale = Vector2(0.702, 0.702)
texture = ExtResource("18_imx3q")
centered = false

[node name="Anim_head1" type="Sprite2D" parent="Body/BodyCorrect" index="22"]
position = Vector2(22.1, 22.2852)
scale = Vector2(0.702, 0.702)
texture = ExtResource("19_l7o4p")
centered = false

[node name="Zombie_bungi_hair" type="Sprite2D" parent="Body/BodyCorrect" index="23"]
position = Vector2(19.4, 18.8852)
scale = Vector2(0.702, 0.637729)
texture = ExtResource("20_rkgsd")
centered = false

[node name="Zombie_bungi_leftarm_hand2" type="Sprite2D" parent="Body/BodyCorrect" index="24"]
visible = false
centered = false

[node name="Zombie_bungi_leftarm_lower2" type="Sprite2D" parent="Body/BodyCorrect" index="25"]
visible = false
centered = false

[node name="Zombie_bungi_rightarm_hand2" type="Sprite2D" parent="Body/BodyCorrect" index="26"]
visible = false
centered = false

[node name="Zombie_bungi_rightarm_lower2" type="Sprite2D" parent="Body/BodyCorrect" index="27"]
visible = false
centered = false

[node name="BungiContainer" type="Node2D" parent="Body/BodyCorrect" index="28"]
position = Vector2(42, 73)

[node name="HpStageChangeComponent" parent="." index="4"]
boundary_value_hp = Array[int]([0])
body_change = Array[ExtResource("30_3wvdt")]([null])

[node name="CharredComponent" parent="." index="6"]
script = ExtResource("30_fblr2")

[node name="AttackComponent" parent="." index="7"]
is_enable_default = false

[node name="CollisionShape2D" parent="AttackComponent/AttackRayComponent/Area2d" index="0"]
position = Vector2(0, 0)

[node name="MoveComponent" parent="." index="8"]
is_enable_default = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="12"]
libraries = {
&"": SubResource("AnimationLibrary_q7pds")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="13"]
tree_root = SubResource("AnimationNodeBlendTree_6178g")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/TimeScale/scale = 1.5
